Edited the widgets file to fix alignment

--- a/app/design/frontend/Scottsbase/default/SMG_ProductCallout/styles/_widgets.scss
+++ b/app/design/frontend/Scottsbase/default/SMG_ProductCallout/styles/_widgets.scss
@@ -28,7 +28,6 @@
             p {
                 text-align: left;
                 width: 90%;
-                font-size: 1.0rem;
                 @media only screen and (max-width: 1024px) {
                     width: 100%;
                     padding: 0;
@@ -54,7 +53,6 @@
             p {
                 text-align: right;
                 width: 90%;
-                font-size: 20px;
                 @media only screen and (max-width: 1024px) {
                     width: 100%;
                     padding: 0;
